...
                style="@style/TextInputLayout"
                android:padding="5dp"
                android:textColorHint="@color/blue_shade_2"
                app:hintTextColor="@color/blue_shade_2" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtRecipeName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/blue_shade_2"
                    android:textColorHint="#01579B"
...
                style="@style/TextInputLayout"
                android:padding="5dp"
                android:textColorHint="@color/blue_shade_2"
                app:hintTextColor="@color/blue_shade_2" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtRecipeCookingTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxWidth="488dp"
                    android:textSize="14sp" />
...
                style="@style/TextInputLayout"
                android:padding="5dp"
                android:textColorHint="@color/blue_shade_2"
                app:hintTextColor="@color/blue_shade_2" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtRecipePrepTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxWidth="488dp"
                    android:textSize="14sp" />
...
                style="@style/TextInputLayout"
                android:padding="5dp"
                android:textColorHint="@color/blue_shade_2"
                app:hintTextColor="@color/blue_shade_2" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtRecipeServings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxWidth="488dp"
                    android:textColor="@color/blue_shade_2"
                    android:textColorHint="#01579B"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/selectSuitabilityTV"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:padding="15dp"
                android:background="@android:drawable/editbox_background_normal"
                android:drawablePadding="16dp"
                android:hint="@string/select_recipe_suitability"
                app:drawableRightCompat="@android:drawable/arrow_down_float" />

            <TextView
                android:id="@+id/selectCuisineTV"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:padding="15dp"
...
                style="@style/TextInputLayout"
                android:padding="5dp"
                android:textColorHint="@color/blue_shade_2"
                app:hintTextColor="@color/blue_shade_2" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtRecipeImageLink"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxWidth="488dp"
                    android:textColor="@color/blue_shade_2"
...
                style="@style/TextInputLayout"
                android:padding="5dp"
                android:textColorHint="@color/blue_shade_2"
                app:hintTextColor="@color/blue_shade_2" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtRecipeLink"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxWidth="488dp"
                    android:textSize="14sp" />
...
                style="@style/TextInputLayout"
                android:padding="5dp"
                android:textColorHint="@color/blue_shade_2"
                app:hintTextColor="@color/blue_shade_2" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtRecipeDesc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|textImeMultiLine"
                    android:textColor="@color/blue_shade_2"
                    android:textColorHint="#01579B"
...
                style="@style/TextInputLayout"
                android:padding="5dp"
                android:textColorHint="@color/blue_shade_2"
                app:hintTextColor="@color/blue_shade_2" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtRecipeMethod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|textImeMultiLine"
                    android:textColor="@color/blue_shade_2"
                    android:textColorHint="#01579B"
...
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:minHeight="48dp"
                android:maxWidth="320dp"
                android:id="@+id/idPublicSwitch"
                android:text="@string/make_recipe_public"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
...
                android:backgroundTint="@android:color/holo_purple"
                android:drawableEnd="@android:drawable/ic_input_add"
                android:text="@string/add_ingredient"
                android:textColor="#000000" />

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

            <Button
...
