...
        android:layout_marginEnd="10dp"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/application_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILUserName"
        android:layout_below="@+id/idImgLogo"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="1dp"
...
        android:layout_centerHorizontal="true"
        style="@style/TextInputLayout"
        android:padding="5dp"
        android:textColorHint="@color/blue_shade_2"
        app:hintTextColor="@color/blue_shade_2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idEdtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/blue_shade_2"
            android:textColorHint="@color/blue_shade_2"
            android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idTILUserName"
        android:layout_marginStart="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
...
        android:hint="@string/enter_password"
        style="@style/TextInputLayout"
        android:padding="5dp"
        android:textColorHint="@color/blue_shade_2"
        app:hintTextColor="@color/blue_shade_2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idEdtPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/blue_shade_2"
            android:textColorHint="@color/blue_shade_2"
            android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/idBtnLogin"
        android:layout_centerHorizontal="true"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/idTILPassword"
...
